[gd_scene load_steps=4 format=3 uid="uid://crgks6cetmi7u"]

[ext_resource type="Script" uid="uid://30uf7ci5tywx" path="res://menus/main_menu.gd" id="1_ij7vn"]
[ext_resource type="PackedScene" uid="uid://ra5s5iyi0nnt" path="res://menus/options.tscn" id="2_yjgyn"]
[ext_resource type="AudioStream" uid="uid://cya82x3fljpfx" path="res://game_sounds/main.ogg" id="3_yjgyn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ij7vn")

[node name="MenuPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuPanel"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="Label" type="Label" parent="MenuPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 60
text = "Eurydice"

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/separation = 30

[node name="StartGameButton" type="Button" parent="MenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Start or continue game"
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
theme_override_font_sizes/font_size = 30
text = "Start game"

[node name="OptionsButton" type="Button" parent="MenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Options"
focus_neighbor_top = NodePath("../StartGameButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="QuitButton" type="Button" parent="MenuPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Quit"
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_bottom = NodePath("../StartGameButton")
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="Options" parent="." instance=ExtResource("2_yjgyn")]
visible = false
layout_mode = 1

[node name="MainMusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_yjgyn")
bus = &"Music"

[connection signal="pressed" from="MenuPanel/MarginContainer/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MenuPanel/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MenuPanel/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
